--- a/index.html
+++ b/index.html
@@ -3,62 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarot Maestro</title>
+    <title>Tarot Maestro - Élite Profesional</title>
     <style>
         body {
-            background-color: #000000;
+            background-color: #050505;
             color: #ffffff;
             font-family: 'Segoe UI', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
+            padding: 20px;
         }
-        .main-card {
-            background-color: #111;
+        .header-banner {
+            width: 100%;
+            max-width: 728px;
+            height: 90px;
+            background: #111;
+            border: 1px dashed #ffd700;
+            margin: 0 auto 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #444;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: rgba(20, 20, 20, 0.95);
             border: 2px solid #ffd700;
-            border-radius: 20px;
-            padding: 40px;
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 0 40px rgba(0,0,0,1);
+        }
+        h1 { color: #ffd700; text-align: center; letter-spacing: 3px; }
+        
+        .jornada-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+            margin-top: 20px;
+        }
+        @media (max-width: 600px) { .jornada-grid { grid-template-columns: 1fr; } }
+        
+        .partido {
+            background: #1a1a1a;
+            border-left: 4px solid #ffd700;
+            padding: 15px;
+            border-radius: 5px;
+            text-align: left;
+        }
+        .equipo { font-weight: bold; color: #eee; }
+        .prediccion { color: #00ff00; font-size: 0.9em; font-weight: bold; margin-top: 5px; }
+
+        .tirada-seccion {
+            margin-top: 40px;
+            padding: 25px;
+            background: radial-gradient(circle, #1a1a1a 0%, #000 100%);
+            border: 1px solid #ffd700;
+            border-radius: 10px;
             text-align: center;
-            box-shadow: 0 0 30px rgba(255, 215, 0, 0.2);
-            max-width: 400px;
-            width: 90%;
         }
-        h1 {
-            color: #ffd700;
-            font-size: 2em;
-            margin-bottom: 20px;
-            letter-spacing: 2px;
-        }
-        .btn-gold {
+        .btn-elite {
             background: linear-gradient(45deg, #ffd700, #b8860b);
-            color: black;
+            color: #000;
             border: none;
-            padding: 15px 30px;
-            font-size: 1.1em;
+            padding: 20px 40px;
+            font-size: 1.2em;
             font-weight: bold;
             border-radius: 50px;
             cursor: pointer;
             text-transform: uppercase;
-            transition: 0.3s;
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3);
         }
-        .btn-gold:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 15px #ffd700;
+        .sidebar-banner {
+            width: 300px;
+            height: 250px;
+            background: #111;
+            border: 1px dashed #ffd700;
+            margin: 20px auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #444;
         }
     </style>
 </head>
 <body>
 
-    <div class="main-card">
-        <h1>🔮 MAESTRO TAROT</h1>
-        <p>Tu destino en las cartas y el deporte</p>
-        <br>
-        <button class="btn-gold" onclick="alert('Las cartas se están mezclando... Prepárate.')">
-            REALIZAR TIRADA
-        </button>
+    <div class="header-banner">Espacio Publicitario - 728x90</div>
+
+    <div class="container">
+        <h1>🔮 TAROT MAESTRO ÉLITE</h1>
+        <p style="text-align: center; color: #ffd700;">Predicciones Profesionales - Jornada Actual</p>
+
+        <div class="jornada-grid">
+            <div class="partido"><div class="equipo">Partido 1</div><div class="prediccion">PREDICCIÓN: VICTORIA LOCAL</div></div>
+            <div class="partido"><div class="equipo">Partido 2</div><div class="prediccion">PREDICCIÓN: EMPATE</div></div>
+            <div class="partido"><div class="equipo">Partido 3</div><div class="prediccion">PREDICCIÓN: VICTORIA VISITANTE</div></div>
+            <div class="partido"><div class="equipo">Partido 4</div><div class="prediccion">PREDICCIÓN: AMBOS MARCAN</div></div>
+            <div class="partido"><div class="equipo">Partido 5</div><div class="prediccion">PREDICCIÓN: VICTORIA LOCAL</div></div>
+            <div class="partido"><div class="equipo">Partido 6</div><div class="prediccion">PREDICCIÓN: VICTORIA LOCAL</div></div>
+            <div class="partido"><div class="equipo">Partido 7</div><div class="prediccion">PREDICCIÓN: EMPATE</div></div>
+            <div class="partido"><div class="equipo">Partido 8</div><div class="prediccion">PREDICCIÓN: VICTORIA VISITANTE</div></div>
+            <div class="partido"><div class="equipo">Partido 9</div><div class="prediccion">PREDICCIÓN: VICTORIA LOCAL</div></div>
+            <div class="partido"><div class="equipo">Partido 10</div><div class="prediccion">PREDICCIÓN: AMBOS MARCAN</div></div>
+        </div>
+
+        <div class="tirada-seccion">
+            <h3>SISTEMA DE TIRADA PROFESIONAL (78 ARCANOS)</h3>
+            <p>Consulta el oráculo para decisiones de alta importancia</p>
+            <button class="btn-elite" onclick="alert('Iniciando Tirada de Élite...')">REALIZAR CONSULTA</button>
+        </div>
     </div>
+
+    <div class="sidebar-banner">Banner Publicitario - 300x250</div>
 
 </body>
 </html>
