--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="coinzilla" content="876e6032c5174633e8f3eef3d3df0f9e" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maestro Tarot | Élite Profesional</title>
     <style>
@@ -118,3 +119,4 @@ function hacerTirada(tipo) {
 </script>
 </body>
 </html>
+
