--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 
 <div class="header"><h1>🔮 MAESTRO TAROT</h1><p>Servicio Élite de Clarividencia</p></div>
 
-<div class="banner"><strong>PUBLICIDAD SUPERIOR</strong><br>Banner Coinzilla / A-Ads 728x90</div>
+<div class="banner"><script type="text/javascript">
+  atOptions = {
+    'key' : 'cbcadd4ec14e943d378226c6da91f361',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script type="text/javascript" src="https://www.highperformanceformat.com/cbcadd4ec14e943d378226c6da91f361/invoke.js"></script>
 
 <div class="caja">
     <h2>⚽ ORÁCULO DEPORTIVO</h2>
@@ -119,5 +128,6 @@ function hacerTirada(tipo) {
 </script>
 </body>
 </html>
+
 
 
