--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     'params' : {}
   };
 </script>
-<script type="text/javascript" src="https://www.highperformanceformat.com/cbcadd4ec14e943d378226c6da91f361/invoke.js"></script>
+<script type="text/javascript" src="https://www.highperformanceformat.com/cbcadd4ec14e943d378226c6da91f361/invoke.js"></script></div>
 
 <div class="caja">
     <h2>⚽ ORÁCULO DEPORTIVO</h2>
@@ -128,6 +128,7 @@ function hacerTirada(tipo) {
 </script>
 </body>
 </html>
+
 
 
 
