--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 </div>
 
-<div class="banner"><strong>PUBLICIDAD INTERMEDIA</strong><br>Espacio para Monetización Cripto</div>
+<div class="banner"><script type="text/javascript"> atOptions = { 'key' : 'cbcadd4ec14e943d378226c6da91f361', 'format' : 'iframe', 'height' : 90, 'width' : 728, 'params' : {} }; </script> <script type="text/javascript" src="https://www.highperformanceformat.com/cbcadd4ec14e943d378226c6da91f361/invoke.js"></script></div>
 
 <div class="caja" style="border-color: #00ffcc;">
     <h2 style="color: #00ffcc;">🌟 TAROT PROFESIONAL PERSONAL</h2>
@@ -128,6 +128,7 @@ function hacerTirada(tipo) {
 </script>
 </body>
 </html>
+
 
 
 
