--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
 
 <script>
 const liga = {
-    j21: ["Levante-Elche", "Rayo-Osasuna", "Valencia-Espanyol", "Sevilla-Athletic", "Villarreal-Madrid", "Barça-Oviedo", "Atleti-Mallorca", "Real Sociedad-Celta", "Alavés-Betis", "Girona-Getafe"],
-    j22: ["Espanyol-Alavés", "Oviedo-Girona", "Osasuna-Villarreal", "Madrid-Rayo", "Betis-Valencia", "Getafe-Celta", "Athletic-Sociedad", "Mallorca-Sevilla", "Barça-Elche", "Atleti-Levante"],
-    j23: ["Alavés-Getafe", "Athletic-Levante", "Atleti-Betis", "Barça-Mallorca", "Celta-Osasuna", "Rayo-Oviedo", "Sociedad-Elche", "Sevilla-Girona", "Valencia-Madrid", "Villarreal-Espanyol"],
-    j24: ["Elche-Osasuna", "Espanyol-Celta", "Getafe-Villarreal", "Girona-Barça", "Levante-Valencia", "Mallorca-Betis", "Rayo-Atleti", "Madrid-Sociedad", "Oviedo-Athletic", "Sevilla-Alavés"],
-    j25: ["Alavés-Girona", "Athletic-Elche", "Atleti-Espanyol", "Barça-Levante", "Celta-Mallorca", "Getafe-Sevilla", "Osasuna-Madrid", "Betis-Rayo", "Sociedad-Oviedo", "Villarreal-Valencia"],
-    j26: ["Barça-Villarreal", "Elche-Espanyol", "Girona-Celta", "Levante-Alavés", "Mallorca-Sociedad", "Rayo-Athletic", "Betis-Sevilla", "Madrid-Getafe", "Oviedo-Atleti", "Valencia-Osasuna"]
+    j22: ["Oviedo-Girona", "Osasuna-Villarreal", "Levante-Atleti", "Elche-Barça", "Madrid-Rayo", "Betis-Valencia", "Getafe-Celta", "Athletic-Sociedad", "Espanyol-Alavés", "Mallorca-Sevilla"],
+    j23: ["Barça-Athletic", "Sociedad-Madrid", "Atleti-Mallorca", "Villarreal-Betis", "Girona-Espanyol", "Sevilla-Valencia", "Celta-Osasuna", "Rayo-Elche", "Alavés-Getafe", "Oviedo-Levante"],
+    j24: ["Madrid-Barça", "Athletic-Atleti", "Valencia-Villarreal", "Betis-Sociedad", "Espanyol-Sevilla", "Osasuna-Girona", "Getafe-Rayo", "Mallorca-Alavés", "Levante-Celta", "Elche-Oviedo"],
+    j25: ["Barça-Levante", "Atleti-Espanyol", "Villarreal-Madrid", "Sociedad-Athletic", "Sevilla-Betis", "Girona-Getafe", "Celta-Mallorca", "Rayo-Valencia", "Alavés-Osasuna", "Oviedo-Elche"],
+    j26: ["Espanyol-Barça", "Madrid-Sevilla", "Athletic-Villarreal", "Valencia-Atleti", "Betis-Girona", "Osasuna-Sociedad", "Getafe-Levante", "Mallorca-Rayo", "Elche-Alavés", "Celta-Oviedo"],
+    j27: ["Barça-Getafe", "Atleti-Villarreal", "Sociedad-Sevilla", "Girona-Madrid", "Valencia-Espanyol", "Rayo-Celta", "Alavés-Betis", "Levante-Mallorca", "Oviedo-Athletic", "Elche-Osasuna"],
+    j28: ["Madrid-Alavés", "Athletic-Elche", "Villarreal-Girona", "Sevilla-Atleti", "Betis-Rayo", "Espanyol-Sociedad", "Osasuna-Barça", "Getafe-Oviedo", "Mallorca-Valencia", "Celta-Levante"],
+    j29: ["Barça-Betis", "Atleti-Madrid", "Girona-Athletic", "Sociedad-Villarreal", "Valencia-Osasuna", "Rayo-Sevilla", "Alavés-Celta", "Levante-Espanyol", "Oviedo-Mallorca", "Elche-Getafe"],
+    j30: ["Madrid-Levante", "Athletic-Betis", "Atleti-Girona", "Villarreal-Barça", "Sevilla-Sociedad", "Espanyol-Rayo", "Osasuna-Oviedo", "Getafe-Alavés", "Mallorca-Elche", "Celta-Valencia"]
 };
 
 const mazo = [
@@ -128,6 +131,7 @@ function hacerTirada(tipo) {
 </script>
 </body>
 </html>
+
 
 
 
